Consolidate DTOs for Bicycle and Rental into a unified package, update controllers and services for consistent DTO usage, and implement JWT-based authentication